# c2pa-rs

./: .commitlintrc.no-scope.yml  .commitlintrc.yml  .cursorrules  .gitattributes  .gitignore  .gitmodules  2024_API_NOTES.md  ASSERTION_METADATA_ARBITRARY_FIELDS.md  ASSET_HASH_IMPLEMENTATION.md  Bindings.md  CAWG_IDENTITY_JSON_FIX.md  CBOR_SIZE_ANALYSIS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  HASH_ASSERTIONS_IMPLEMENTATION.md  HASH_ENCODING_FIX.md  INGREDIENT_ASSERTIONS_FIX.md  JPEG_TRUST_IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SCHEMA_COMPLIANCE_IMPLEMENTATION.md  SDK_CBOR_COMPARISON.md  SECURITY.md  Signing Scenarios.txt  V2_API_NOTES.md  codecov.yml  compare_cbor_libs.sh  deny.toml  dependabot.yml  make_release.ps1  release-plz.toml  rustfmt.toml  setup-rust-openssl.ps1  tmp.json  tmp2.json
c2pa-claim/: Cargo.toml
c2pa-claim/src/: assertion.rs  claim.rs  claim_generator_info.rs  error.rs  hashed_uri.rs  lib.rs
c2pa-claim/tests/: roundtrip.rs
c2pa-compat/: Cargo.toml  README.md
c2pa-compat/src/: full-manifest.json  main.rs
c2pa-raw-crypto/: Cargo.toml  README.md
c2pa-raw-crypto/src/: ec_utils.rs  lib.rs  oid.rs  oids.rs  signer.rs  signing_alg.rs  validator.rs
c2pa-store/: Cargo.toml
c2pa-store/src/: error.rs  io_utils.rs  lib.rs  store.rs
c2pa-store/tests/: roundtrip.rs
c2pa-test/: Cargo.toml  build.rs
c2pa-test/src/: lib.rs
c2pa-wasm/: Cargo.toml  LICENSE-MIT  README.md  STREAMING_API.md  build.sh  test_streaming.mjs
c2pa-wasm/examples/: index.html  index.js  package.json  streaming_example.html  typescript-example.ts
c2pa-wasm/src/: lib.rs
c2pa-wasm/tests/: web.rs
c2pa_c/: Cargo.toml  Makefile  build.rs  cbindgen.toml
c2pa_c/src/: c2pa_stream.rs  c_api.rs  error.rs  lib.rs  signer_info.rs
c2pa_c_ffi/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
c2pa_c_ffi/examples/: CMakeLists.txt  README.md  build_cmake_example.sh  build_emscripten_example.sh  emscripten_example.cpp
c2pa_c_ffi/src/: c2pa_stream.rs  c_api.rs  error.rs  ffi_handle_system.rs  ffi_macros.rs  ffi_utils.rs  json_api.rs  lib.rs  maybe_send_sync.rs  runtime.rs  signer_info.rs
c2pa_cbor/: CHANGELOG.md  Cargo.toml  README.md
c2pa_cbor/benches/: BENCHMARKS.md  cbor_perf.rs
c2pa_cbor/oom_test/: Dockerfile.test  cbor-dos-test.rs  cbor_bomb.cbor  poc_oom.py  run_docker_test.sh  test_oom.sh
c2pa_cbor/src/: constants.rs  decoder.rs  encoder.rs  error.rs  lib.rs  ser.rs  tags.rs  value.rs
c2pa_cbor/tests/: compare_serde_cbor.rs  compat_test.rs  profile_deserialization.rs  test_option_handling.rs
c2patool/: Cargo.toml
c2patool/sample/: config.json  es256_certs.pem  es256_private.key
c2patool/src/: README.md  claim_def.rs  config.rs  main.rs  signer.rs
c2patool/tests/: integration.rs
c_api/: CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  cbindgen.toml
c_api/src/: android.rs  c2pa_stream.rs  c_api.rs  error.rs  json_api.rs  lib.rs  signer_info.rs
cawg_identity/: CHANGELOG.md  Cargo.toml  README.md
cawg_identity/examples/: cawg.rs  fragmented_bmff.rs
cawg_identity/src/: lib.rs  validator.rs
cli/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bleh.json  deny.toml  example.json  example_cawg_raw_manifest_store.txt  tmp.json
cli/chocolatey/: c2patool.nuspec
cli/docs/: cawg_x509_signing.md  command-ref.md  manifest.md  project-contributions.md  release-notes.md  signing.md  usage.md  x_509.md
cli/sample/: CAIXCI.json  allowed_list.pem  cawg_settings.json  settings.json  store.cfg  test.json  trust_anchors.pem
cli/schemas/: crJSON-schema.json  ingredient.json  manifest-definition.json
cli/src/: args.rs  callback_signer.rs  cawg_parser.rs  commands.rs  config.rs  display_decorator.rs  fragment.rs  fs_report.rs  info.rs  live_video.rs  live_video_sign.rs  main.rs  manifest_config.rs  read.rs  service_signer.rs  sign.rs  signer.rs  tree.rs  trust.rs  util.rs
cli/tests/: .syncthing.extract.rs.tmp  .syncthing.view.rs.tmp  integration.rs  test_extract.rs  test_sign.rs  test_trust.rs  test_utils.rs  test_view.rs
crypto/: CHANGELOG.md  Cargo.toml  README.md
crypto/src/: cose_sign.rs  cose_validator.rs  error.rs  lib.rs  ocsp_utils.rs  signer.rs  signing_alg.rs  status_tracker.rs  time_stamp.rs  validation_status.rs
export_schema/: Cargo.toml  crJSON-schema.json  indicators-schema.json
export_schema/src/: main.rs
internal/crypto/: CHANGELOG.md  Cargo.toml  README.md  rustc-ice-2024-12-30T18_44_36-52351.txt  rustfmt.toml
internal/status-tracker/: CHANGELOG.md  Cargo.toml  README.md
make_test_images/: Cargo.toml  tests.json
make_test_images/json_manifests/: C.json  CA.json  CACA.json  CACAE-uri-CA.json  CACAICAICICA.json  CAE-uri-CA.json  CAI.json  CAIAIIICAICIICAIICICA.json  CAICA.json  CAICAI.json  CI.json  CICA.json  CICACACA.json  CIE-sig-CA.json  CII.json  E-clm-CAICAI.json  E-sig-CA.json  E-uri-CA.json  E-uri-CIE-sig-CA.json  XCA.json  XCI.json
make_test_images/json_manifests_saved/: CAICAI.json  E-uri-CA.json  E-uri-CIE-sig-CA.json  XCI.json
make_test_images/json_manifests_v1/: C.json  CA.json  CACA.json  CACAE-uri-CA.json  CACAICAICICA.json  CAE-uri-CA.json  CAI.json  CAIAIIICAICIICAIICICA.json  CAICA.json  CAICAI.json  CI.json  CICA.json  CICACACA.json  CIE-sig-CA.json  CII.json  E-sig-CA.json  E-uri-CA.json  XCA.json  XCI.json
make_test_images/json_manifests_v2/: C.json  CA.json  CACA.json  CACAE-uri-CA.json  CACAICAICICA.json  CAE-uri-CA.json  CAI.json  CAIAIIICAICIICAIICICA.json  CAICA.json  CAICAI.json  CI.json  CICA.json  CICACACA.json  CIE-sig-CA.json  CII.json  E-sig-CA.json  E-uri-CA.json  XCA.json  XCI.json
make_test_images/src/: compare_manifests.rs  main.rs  make_test_images.rs  make_thumbnail.rs  types.json
sdk/: CLAIM_STORE_API.md  Cargo.toml  build.rs  dhat-heap.json
sdk/benches/: complex.rs  complex_read.rs  fast_sign.rs  ingredient_memory.rs  offline_signing_cai_9400.rs  read.rs  redact.rs  settings.rs  settings_memory.rs  sign.rs  sign_benchmark.rs  signing.rs
sdk/examples/: api.rs  builder_sample.rs  (+15 more)
(+1418 files in other folders)
