[workspace]
resolver = "3"

members = [
    "c2pa_c_ffi",
    "cli",
    "export_schema",
    "macros",
    "make_test_images",
    "sdk",
]

# members in this workspace can share this version setting
[workspace.package]
version = "0.80.2"

[workspace.dependencies]
c2pa = { path = "sdk", default-features = false }

[profile.dev]
opt-level = 1          # allows test code to run faster at a small compile time cost
debug = 2              # symbols for debugging - switch to 1 to disable debug symbols

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = 3
lto = "thin"  # Link time optimization.
