[package]
name = "c2pa-claim"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone C2PA claim construction and CBOR round-trip (exploration crate)"

[dependencies]
c2pa_cbor = "0.77.2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = { version = "1", features = ["preserve_order"] }
serde-transcode = "1.1.1"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }
