[package]
name = "c2pa-compat"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"
license = "MIT OR Apache-2.0"

[dependencies]
c2pa = { path = "../sdk", features = [
  "unstable_api",
  "openssl_sign",
  "file_io",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.117"
ed25519-dalek = "2.1.1"
pem = "3.0.2"
