[package]
name = "c2pa-store"
version.workspace = true
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Standalone C2PA manifest store: JUMBF I/O without asset coupling (exploration crate)"

[dependencies]
c2pa-claim = { path = "../c2pa-claim" }
brotli = "7.0.0"
byteorder = "1"
hex = "0.4"
log = "0.4"
thiserror = "2"

[dev-dependencies]
c2pa = { path = "../sdk", default-features = false, features = ["rust_native_crypto"] }
c2pa_cbor = "0.77.2"
extfmt = "0.2.0"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11.14"
serde-transcode = "1.1.1"
serde_json = "1"
