[package]
name = "c2pa-test"
version = "0.1.0"
edition = "2021"

[dependencies]
c2pa = { path = "../sdk" }
phf = { version = "0.11.2", optional = true }

[build-dependencies]
phf_codegen = { version = "0.11.2", optional = true }

[target.'cfg(target_arch = "wasm32")'.features]
default = ["include_bytes"]

[features]
default = ["include_bytes"]            # TODO: temp
include_bytes = ["phf", "phf_codegen"]
