[package]
name = "c2pa-test"
version = "0.1.0"
edition = "2021"

[dependencies]
c2pa = { path = "../sdk" }
phf = "0.11.2"

[build-dependencies]
phf_codegen = "0.11.2"
walkdir = "2.5.0"

[target.'cfg(target_arch = "wasm32")'.features]
default = ["include_bytes"]

[features]
default = ["include_bytes"] # TODO: temp
include_bytes = []
