[package]
name = "c2pa_wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for the C2PA SDK"
authors = ["C2PA Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/contentauth/c2pa-rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
c2pa = { path = "../sdk", default-features = false, features = [
    "rust_native_crypto",
    "fetch_remote_manifests"
]}
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "console",
  "File",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

# Exclude WASM tests from regular cargo test since they need wasm-pack test
[[test]]
name = "web"
harness = false
