[package]
name = "c2pa-c"
version = { workspace = true }
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread","rt"] }
cawg-identity = "0.12.0"
c2pa = { version = "0.49.3", features = [
    "file_io",
    "add_thumbnails",
    "fetch_remote_manifests",
    "v1_api",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
zip = { version = "2.6.1", default-features = false }

[build-dependencies]
cbindgen = "0.28"
