[package]
name = "c2pa-c-ffi"

version.workspace = true

description = "C language FFI base for c2pa crate to create bindings"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com>", "Tania Mathern <mathern@adobe.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/c2pa-c-ffi"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs"
keywords = ["metadata", "ffi", "bindings"]
categories = ["api-bindings"]

[lib]
name = "c2pa_c"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
file_io = ["c2pa/file_io"]
rust_native_crypto = ["c2pa/rust_native_crypto"]
pdf = ["c2pa/pdf"]

[dependencies]
c2pa = { path = "../sdk", version = "0.69.0", default-features = false, features = [
    "add_thumbnails",
    "fetch_remote_manifests",
    "file_io",
    "pdf"
] }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
tokio = { version = "1.36", features = ["rt-multi-thread", "rt"] }
log = "0.4"
fern = "0.6"
chrono = "0.4"   # For timestamps

[dev-dependencies]
tempfile = "3.7.0"

[build-dependencies]
cbindgen = "0.29"
