[package]
name = "c2pa_cbor"
version.workspace = true
edition = "2024"
description = "CBOR encoder/decoder: serde_cbor compatible with support for tagged types."
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs/tree/main/c2pa_cbor"
keywords = ["cbor", "metadata"]


[dependencies]
half = "2.0.0" # for f16 support - until f16 is stabilized
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"

[dev-dependencies]
serde_json = "1.0"
serde-transcode = "1.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "cbor_perf"
harness = false

