[package]
name = "c2patool"
version = "0.2.0"
authors = ["Gavin Peacock <gpeacock@adobe.com>", "Maurice Fisher <mfisher@adobe.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.58.0"

[dependencies]
anyhow = "1.0"
c2pa = { version = "0.2", features = ["file_io"] }
dirs = "4.0" 
env_logger = "0.9"
log = "0.4" 
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
tempfile = "3.3" 

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
