[package]
name = "c2pa-c"
version = "0.49.5"
edition = "2021"
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[features]
default = ["json_api", "openssl"]
json_api = ["c2pa/v1_api"]
openssl = ["c2pa/openssl"]
rust_native_crypto = ["c2pa/rust_native_crypto"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread","rt"] }
c2pa = { path = "../sdk", version = "0.53.0", features = [
    "file_io",
    "add_thumbnails",
    "fetch_remote_manifests",
], default-features = false }
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.7.0"

[build-dependencies]
cbindgen = "0.28"
