[package]
name = "c2pa-c-ffi"
version.workspace = true
edition = "2021"
description = "C FFI for the Rust C2PA SDK"
authors = [
    "Gavin Peacock <gpeacock@adobe.com>",
]
license = "MIT OR Apache-2.0"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs"
keywords = ["C", "ffi", "c2pa"]
categories = ["api-bindings"]

[lib]
name = "c2pa_c"
crate-type = ["cdylib", "staticlib"]

[features]
rust_native_crypto = ["c2pa/rust_native_crypto"]
file_io = ["c2pa/file_io"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread","rt"] }
c2pa = { workspace = true , features = [
    "file_io",
    "add_thumbnails",
    "fetch_remote_manifests",
]}
scopeguard = "1.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.64"
zip = { version = "3.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.7.0"

[build-dependencies]
cbindgen = "0.28"
