[package]
name = "cawg-identity"
version = "0.1.1"
description = "Rust SDK for CAWG (Creator Assertions Working Group) identity assertion"
authors = [
    "Eric Scouten <scouten@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cawg-identity"
homepage = "https://creator-assertions.github.io/identity/"
repository = "https://github.com/contentauth/c2pa-rs"
readme = "README.md"
keywords = ["identity"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.76.0"
exclude = ["tests/fixtures"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
async-trait = "0.1.78"
base64 = "0.22.1"
c2pa = { version = "0.37.0", features = ["openssl_ffi_mutex"] }
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
coset = "0.3.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex-literal = "0.4.1"
iref = { version = "3.2.2", features = ["serde"] }
jumbf = "0.4.0"
multibase = "0.9.1"
nonempty-collections = { version = "0.2.9", features = ["serde"] }
non-empty-string = { version = "=0.2.4", features = ["serde"] }
rand = "0.8.5"
regex = "1.11"
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
static-iref = "3.0"
thiserror = "1.0.61"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
c2pa = { version = "0.37.0", features = ["openssl_ffi_mutex"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
c2pa = { version = "0.37.0", features = [] }
wasm-bindgen = "0.2.95"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
tempfile = "3.10.1"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
c2pa = { version = "0.37.0", features = ["file_io", "openssl_sign", "openssl_ffi_mutex", "v1_api"] }
httpmock = "0.7.0"
tokio = { version = "1.40", features = ["macros"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
c2pa = { version = "0.37.0", features = [] }
wasm-bindgen-test = "0.3.31"
