[package]
name = "cawg-identity"
version = "0.1.1"
description = "Rust SDK for CAWG (Creator Assertions Working Group) identity assertion"
authors = [
    "Eric Scouten <scouten@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cawg-identity"
homepage = "https://creator-assertions.github.io/identity/"
repository = "https://github.com/contentauth/c2pa-rs"
readme = "README.md"
keywords = ["identity"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.81.0"
exclude = ["tests/fixtures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
hex-literal = "0.4.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.95"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.31"
