[package]
name = "cawg-identity"
version = "0.13.0"
description = "Rust SDK for CAWG (Creator Assertions Working Group) identity assertion"
authors = [
    "Eric Scouten <scouten@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/cawg-identity"
homepage = "https://creator-assertions.github.io/identity/"
repository = "https://github.com/contentauth/c2pa-rs"
readme = "README.md"
keywords = ["identity"]
categories = ["api-bindings"]
edition = "2021"
rust-version = "1.82.0"
exclude = ["tests/fixtures"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
v1_api = ["c2pa/v1_api", "c2pa/file_io"]

[dependencies]
async-trait = "0.1.78"
base64 = "0.22.1"
c2pa = { path = "../sdk", version = "0.49.3" }
c2pa-crypto = { path = "../internal/crypto", version = "0.8.2" }
c2pa-status-tracker = { path = "../internal/status-tracker", version = "0.6.1" }
chrono = { version = "0.4.38", features = ["serde"] }
ciborium = "0.2.2"
coset = "0.3.8"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
hex-literal = "0.4.1"
iref = { version = "3.2.2", features = ["serde"] }
multibase = "0.9.1"
non-empty-string = { version = "=0.2.4", features = ["serde"] }
nonempty-collections = { version = "0.2.9", features = ["serde"] }
rand = "0.8.5"
regex = "1.11"
serde = { version = "1.0.197", features = ["derive"] }
serde_bytes = "0.11.14"
serde_json = "1.0.117"
static-iref = "3.0"
thiserror = "1.0.61"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wstd = "0.5"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.8", default-features = false, features = ["rustls-tls"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dependencies]
wasm-bindgen = "0.2.95"

[dev-dependencies]
anyhow = "1.0.97"
c2pa = { path = "../sdk", version = "0.49.3", features = ["file_io"] }
serde = { version = "1.0.197", features = ["derive"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
httpmock = "0.7.0"
tokio = { version = "1.44.2", features = ["macros", "rt"] }

[target.'cfg(all(target_arch = "wasm32", not(target_os = "wasi")))'.dev-dependencies]
wasm-bindgen-test = "0.3.31"
