[package]
name = "c2patool"
default-run = "c2patool"
version = "0.16.4"
description = "Tool for displaying and creating C2PA manifests."
authors = [
    "Gavin Peacock <gpeacock@adobe.com>",
    "Maurice Fisher <mfisher@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://opensource.contentauthenticity.org/docs/c2patool"
readme = "README.md"
keywords = ["c2pa", "xmp", "metadata"]
edition = "2018"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs/tree/main/cli"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[dependencies]
anyhow = "1.0"
atree = "0.5.2"
c2pa = { path = "../sdk", version = "0.49.3", features = [
	"fetch_remote_manifests",
	"file_io",
	"add_thumbnails",
	"pdf"
] }
cawg-identity = { path = "../cawg_identity", version = "0.13.0" }
c2pa-crypto = { path = "../internal/crypto", version = "0.8.2" }
clap = { version = "4.5.10", features = ["derive", "env"] }
env_logger = "0.11.7"
glob = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tempfile = "3.3"
treeline = "0.1.0"
pem = "3.0.3"
url = "2.5.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
async-std = { version = "1.12", features = ["attributes"] }
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.14"

[dev-dependencies]
mockall = "0.13.0"

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.7.0"
predicates = "3.1"

[package.metadata.binstall]
# Use defaults
