[package]
name = "c2patool"
default-run = "c2patool"
version = "0.26.47"
description = "Tool for displaying and creating C2PA manifests."
authors = [
    "Gavin Peacock <gpeacock@adobe.com>",
    "Maurice Fisher <mfisher@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://opensource.contentauthenticity.org/docs/c2patool"
readme = "README.md"
keywords = ["c2pa", "xmp", "metadata"]
edition = "2018"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs/tree/main/cli"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[features]
default = ["networking"]
networking = [
    "c2pa/default_http"
]

[dependencies]
anyhow = "1.0"
atree = "=0.5.2"
c2pa = { path = "../sdk", version = "0.79.3", features = [
    "fetch_remote_manifests",
    "file_io",
    "add_thumbnails",
    "pdf",
] }
clap = { version = "4.5.50", features = ["derive", "env", "string"] }
env_logger = "0.11.8"
glob = "0.3.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0.2"
tempfile = "3.3"
treeline = "0.1.0"
pem = "3.0.6"
url = "2.5.0"
etcetera = "0.11.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
tokio = { version = "1.44.2", features = ["rt", "rt-multi-thread"] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.14"
wstd = "0.5"

[package.metadata.deb]
maintainer = "CAI Open Source <caiopensrc@adobe.com>"
copyright = "2026 Adobe. All rights reserved."
license-file = ["../LICENSE-MIT", "4"]
extended-description = """\
    c2patool is a command line tool for working with C2PA manifests \
    and media asset provenance."""
depends = "$auto"
section = "utils"
priority = "optional"
assets = [
    ["target/release/c2patool", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/c2patool/README.md", "644"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/c2patool", dest = "/usr/bin/c2patool", mode = "0755" },
    { source = "README.md", dest = "/usr/share/doc/c2patool/README.md", mode = "0644", doc = true },
]

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
assert_cmd = "2.0.14"
httpmock = "0.8.2"
predicates = "3.1"
