[package]
name = "c2patool"
default-run = "c2patool"
version = "0.26.69"
description = "Tool for displaying and creating C2PA manifests."
authors = [
    "Gavin Peacock <gpeacock@adobe.com>",
    "Maurice Fisher <mfisher@adobe.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://opensource.contentauthenticity.org/docs/c2patool"
readme = "README.md"
keywords = ["c2pa", "xmp", "metadata"]
edition = "2018"
homepage = "https://contentauthenticity.org"
repository = "https://github.com/contentauth/c2pa-rs/tree/main/cli"

[features]
default = ["networking"]
networking = [
    "c2pa/default_http"
]

[dependencies]
anyhow = "1.0"
atree = "0.5.4"
c2pa = { workspace = true, features = [
    "openssl",
    "fetch_remote_manifests",
    "file_io",
    "add_thumbnails",
    "pdf",
] }
clap = { version = "4.6.1", features = ["derive", "env", "string"] }
env_logger = "0.11.10"
glob = "0.3.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1.2"
tempfile = "3.27"
treeline = "0.1.0"
pem = "3.0.6"
url = "2.5.8"
etcetera = "0.11.0"

[target.'cfg(not(target_os = "wasi"))'.dependencies]
reqwest = { version = "0.12.28", features = ["blocking"] }
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "wasi")'.dependencies]
wasi = "0.14"
wstd = "0.5"

[package.metadata.cargo-udeps.ignore]
development = ["mockall"]

[dev-dependencies]
mockall = "0.14.0"

[target.'cfg(not(target_os = "wasi"))'.dev-dependencies]
assert_cmd = "2.2.2"
httpmock = "0.8.3"
predicates = "3.1"
