[package]
name = "export_schema"
version.workspace = true
authors = ["Dave Kozma <dkozma@adobe.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.102"
c2pa = { path = "../sdk", features = ["json_schema"], default-features = false }
schemars = "1.2.1"
serde_json = "1.0.150"
