[package]
name = "make_test_images"
version.workspace = true
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.85.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(test)'] }
# Workaround for https://github.com/est31/cargo-udeps/issues/293.

[dependencies]
anyhow = "1.0.40"
c2pa = { workspace = true }
env_logger = "0.11"
log = "0.4.8"
lazy_static = "1.4.0"
image = { version = "0.25.2", default-features = false, features = [
	"jpeg",
	"png",
] }
memchr = "2.7.4"
nom = "7.1.3"
regex = "1.5.6"
serde = "1.0.197"
serde_json = { version = "1.0.117", features = ["preserve_order"] }
tempfile = "3.15.0"

