[package]
name = "make_test_images"
version.workspace = true
authors = ["Gavin Peacock <gpeacock@adobe.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
anyhow = "1.0.103"
c2pa = { workspace = true, features = [
    "openssl",
	"fetch_remote_manifests",
	"file_io",
	"add_thumbnails",
	"pdf",
    "default_http"
] }
env_logger = "0.11"
lazy_static = "1.5.0"
image = { version = "0.25.10", default-features = false, features = [
	"jpeg",
	"png",
] }
memchr = "2.8.1"
nom = "7.1.3"
regex = "1.12.3"
serde = "1.0.228"
serde_json = { version = "1.0.150", features = ["preserve_order"] }
tempfile = "3.27.0"
toml = "1.1.2"
